[tool.poetry]
name = "robusta-krr"
version = "0.1.0"
description = "Robusta's Resource Recommendation engine for Kubernetes"
authors = ["Павел Жуков <33721692+LeaveMyYard@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "robusta_krr"}]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.scripts]
krr = "robusta_krr.main:app"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
typer = {extras = ["all"], version = "^0.7.0"}
pydantic = "^1.10.5"
kubernetes = "^26.1.0"
prometheus-api-client = "^0.5.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
types-pyyaml = "^6.0.12.8"
types-cachetools = "^5.3.0.4"
types-requests = "^2.28.11.15"
pyinstaller = "^5.9.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "robusta_krr"
